# githubsrm

./: .env.example  .gitignore  .travis.yml  404.html  CNAME  LICENSE  Procfile  README.md  deploy.sh  ecosystem.config.js  index.html  netlify.toml  package.json  requirements.txt  run.sh  run_tests.sh  test-config.txt  test-runner  test-runner.sh  test.config  test.frontend.config  test_runner.sh
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-push
.old/: .travis.yml  deploy.sh  id_rsa.enc  test.backend.config  test.backend.sh  test.frontend.sh  test_runner.sh
client/: .gitignore  (+5 more)
client-landing/: .env.example  next.config.js  tailwind.config.js
client-portals/: .env.example  next.config.js  package.json  tsconfig.json
server/: .gitignore  pyproject.toml  requirements.txt  run.sh  run_backend_tests.sh
server/githubsrm/: .env.example
server/githubsrm/administrator/: __init__.py  apps.py  definitions.py  errors.py  issue_jwt.py  middleware.py  models.py  perms.py  test.py  urls.py  utils.py  views.py
server/githubsrm/apis/: __init__.py  admin_views.py  alpha_maintainer_code.html  apps.py  aws.py  checks_models.py  definations.py  definitions.py  errors.py  middleware.py  models.py  open_views.py  perms.py  schemas.py  tests.py  urls.py  utils.py  views.py
server/githubsrm/apis/templates/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  beta_maintainer_accept.html  email_statics.json
server/githubsrm/core/: __init__.py  asgi.py  aws.py  errorfactory.py  middleware.py  models.py  settings.py  throttle.py  urls.py  utils.py  views.py  wsgi.py
server/githubsrm/core/log_utils/: log.py  rotate.py
server/githubsrm/maintainer/: __init__.py  apps.py  definitions.py  errors.py  middleware.py  models.py  urls.py  utils.py  views.py
server/tests/: __init__.py  test_admin.py  test_apis.py  test_full_flow.py  test_maintainer.py  test_schema.py  test_server.py
(+335 files in other folders)
